--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -2,10 +2,60 @@ name: KUnit Tests
 
 on:
   pull_request:
-    branches: [ "rpi-*"]
+    paths:
+      - 'arch/**'
+      - 'block/**'
+      - 'certs/**'
+      - 'crypto/**'
+      - 'drivers/**'
+      - 'fs/**'
+      - 'include/**'
+      - 'init/**'
+      - 'io_uring/**'
+      - 'ipc/**'
+      - 'kernel/**'
+      - 'lib/**'
+      - 'mm/**'
+      - 'net/**'
+      - 'rust/**'
+      - 'scripts/**'
+      - 'security/**'
+      - 'sound/**'
+      - 'tools/**'
+      - 'usr/**'
+      - 'virt/**'
+      - 'Kbuild'
+      - 'Kconfig'
+      - 'Makefile'
+    branches: [ "main"]
 
   push:
-    branches: [ "rpi-*"]
+    paths:
+      - 'arch/**'
+      - 'block/**'
+      - 'certs/**'
+      - 'crypto/**'
+      - 'drivers/**'
+      - 'fs/**'
+      - 'include/**'
+      - 'init/**'
+      - 'io_uring/**'
+      - 'ipc/**'
+      - 'kernel/**'
+      - 'lib/**'
+      - 'mm/**'
+      - 'net/**'
+      - 'rust/**'
+      - 'scripts/**'
+      - 'security/**'
+      - 'sound/**'
+      - 'tools/**'
+      - 'usr/**'
+      - 'virt/**'
+      - 'Kbuild'
+      - 'Kconfig'
+      - 'Makefile'
+    branches: [ "main"]
 
 jobs:
   core:
